[gd_scene load_steps=7 format=3 uid="uid://h3m2qalip2d0"]

[ext_resource type="Texture2D" uid="uid://dso8qkwogtl30" path="res://Sprites/Objetos/Puerta y palanca.png" id="1_80wqm"]
[ext_resource type="Script" path="res://Scripts/Elementos puzzles/Bloque_hielo.gd" id="1_omgo5"]


[sub_resource type="CircleShape2D" id="CircleShape2D_pbty3"]
radius = 9.86961

[sub_resource type="Animation" id="Animation_b2x5l"]
resource_name = "Derretir"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_mttvc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_q61th"]
_data = {
"Derretir": SubResource("Animation_b2x5l"),
"RESET": SubResource("Animation_mttvc")
}

[node name="Bloque de Hielo" type="Area2D"]
collision_layer = 4
collision_mask = 12
script = ExtResource("1_omgo5")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 1
texture_filter = 1
texture = ExtResource("1_80wqm")
offset = Vector2(0, -8)
hframes = 8
vframes = 3
frame = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(1.01321, 0.45695)
shape = SubResource("CircleShape2D_pbty3")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_q61th")
}

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
